--- a/css/style.default.css
+++ b/css/style.default.css
@@ -155,7 +155,7 @@ INTRO SECTION
   background-position: center center;
   overflow: hidden;
   background-attachment: fixed;
-  background-image: url('/img/eilis-garvey-mpqYrw-y1EM-unsplash.jpg');
+  background-image: url('/portfolio-of-wonders/img/eilis-garvey-mpqYrw-y1EM-unsplash.jpg');
 }
 
 .intro h1,
@@ -196,6 +196,11 @@ INTRO SECTION
   }
 }
 
+.size{
+  height: 200px;
+  width: 200px;
+}
+
 /*
 *
 =====================
@@ -220,7 +225,7 @@ CONTACT SECTION
 =====================
 *
 */
-.contact-form {
+#contact-form {
   margin-bottom: 40px;
 }
 
@@ -247,28 +252,22 @@ p.social a {
 p.social a i {
   vertical-align: bottom;
   line-height: 38px;
+
 }
 
-p.social a.facebook {
-  background-color: #ccc;
-}
-
-p.social a.gplus {
-  background-color: #333;
-}
-
-p.social a.twitter {
-  background-color: #aaa;
-}
-
-p.social a.instagram {
-  background-color: #999;
-}
 
 p.social a.email {
   background-color: #666;
 }
 
+.col-lg-6{
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.email{
+  margin-right: 20px;
+}
 /*
 *
 =====================
