--- a/css/style.default.css
+++ b/css/style.default.css
@@ -140,7 +140,7 @@ INTRO SECTION
   background-position: center center;
   overflow: hidden;
   background-attachment: fixed;
-  background-image: url('/portfolio-of-wonders/img/eilis-garvey-mpqYrw-y1EM-unsplash.jpg');
+  background-image: url('../portfolio-of-wonders/img/eilis-garvey-mpqYrw-y1EM-unsplash.jpg');
 }
 
 .intro h1,
