--- a/style.default.css
+++ b/style.default.css
@@ -155,7 +155,7 @@ INTRO SECTION
   background-position: center center;
   overflow: hidden;
   background-attachment: fixed;
-  background-image: url('/portfolio-of-wonders/img/eilis-garvey-mpqYrw-y1EM-unsplash.jpg');
+  background-image: url('img/eilis-garvey-mpqYrw-y1EM-unsplash\ \(1\).jpg');
 }
 
 .intro h1,
