--- a/style.default.css
+++ b/style.default.css
@@ -140,7 +140,7 @@ INTRO SECTION
   background-position: center center;
   overflow: hidden;
   background-attachment: fixed;
-  background-image: url('/img/pitt.jpg');
+  background-image: url('/img/safar-safarov-MSN8TFhJ0is-unsplash.jpg');
 }
 
 .intro h1,
