--- a/style.default.css
+++ b/style.default.css
@@ -19,7 +19,7 @@ body {
 }
 
 section {
-  padding: 150px 0;
+  padding-top: 100px;
 }
 
 @media (max-width: 767.98px) {
@@ -212,28 +212,9 @@ SERVICES SECTION
   margin-left: 20px;
 }
 
-#center{
-  display:-ms-flexbox;
-  display:flex;
-  -ms-flex-wrap:wrap;
-  flex-wrap:wrap;
-  margin-right:200px;
-  margin-left:200px;
-  margin-bottom: 30px;
-  margin-top: 30px;
-}
-
-.row{
-  margin-top: 30px;
-}
-
 .container {
   width: 100%;
   margin: 0 auto;
-}
-
-#walker{
-  margin-right: 20px;
 }
 
 .home .walk {
@@ -243,6 +224,7 @@ SERVICES SECTION
   justify-content: space-evenly;
   width: 100%;
 }
+
 .home .walk .walk-text {
   width: 49%;
 }
@@ -250,31 +232,136 @@ SERVICES SECTION
 .home .walk .walk-text p {
   margin-bottom: 26px;
   margin-left: 100px;
+  width: 49%;
 }
+
 .home .walk .walk-text .btn {
   color: white;
   text-decoration-line: none;
-  background-color: black;
-  width: 65px;
+  background-color: lightgray;
+  width: 90px;
   padding: 8px;
   border-radius: 8px;
   margin-left: 100px;
 }
+
 .home .walk .buttons {
-  color: white;
+  color: black;
   text-decoration: none;
   justify-content: center;
 }
+
 .home .walk .walk-img {
-  width: 46%;
+  width: 49%;
   margin-left: 4%;
 }
+
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
   margin-left: 10px;
   margin-right: 50px;
+}
+
+.home .walk #walkimg img {
+  width: 100%;
+  height: 75%;
+  border-radius: 10px;
+  margin-left: 10px;
+  margin-right: 50px;
+}
+
+
+/*more picture */
+
+.home .run {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.home .run .run-text {
+  width: 49%;
+}
+
+.home .run .run-text p {
+  margin-left: 100px;
+  width: 49%;
+}
+
+.home .run .run-text .btn {
+  color: white;
+  text-decoration-line: none;
+  background-color: lightgray;
+  width: 90px;
+  padding: 8px;
+  border-radius: 8px;
+  margin-left: 150px;
+}
+
+.home .run .buttons {
+  color: black;
+  text-decoration: none;
+  justify-content: center;
+}
+
+.home .run .run-img {
+  width: 49%;
+  margin-left: 4%;
+}
+
+.home .run .run-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  margin-left: 10px;
+  margin-right: 50px;
+}
+
+/*more pictures */
+
+.home .chill {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.home .chill .chill-text {
+  width: 50%;
+}
+
+.home .chill .chill-text p {
+  margin-left: 250px;
+  width: 50%;
+  margin-bottom: 100px;
+}
+
+.home .chill .chill-text .btn {
+  color: white;
+  text-decoration-line: none;
+  background-color: lightgray;
+  width: 90px;
+  padding: 8px;
+  border-radius: 8px;
+  margin-left: 300px;
+}
+
+.home .chill .buttons {
+  color: black;
+  text-decoration: none;
+  justify-content: center;
+}
+
+.home .chill .chill-img {
+  width: 49%;
+}
+
+.home .chill .chill-img img {
+  width: 50%;
+  height: 75%;
+  border-radius: 10px;
+  margin-right: 150px;
 }
 
 
